# rules_jest_junit_failure

./: BUILD.bazel  WORKSPACE  jest.config.json  local.test.js  package-lock.json  package.json  pnpm-lock.yaml
patches/aspect_rules_js/: npm_import.patch
